--- a/estrtura de decisao if e else.html
+++ b/estrtura de decisao if e else.html
@@ -1,4 +1,7 @@
-var idade_minima = 18
+<html>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <script>
+var idade_minima = 10
 var idade_pessoa = 16
 
 if (idade_pessoa >= idade_minima) { 
@@ -6,4 +9,8 @@ if (idade_pessoa >= idade_minima) {
 }else { 
     alert ("acesso não autorizado")
 }
+    </script>
+</html>
+
+
 
