--- a/tradutor javascrip'.html
+++ b/tradutor javascrip'.html
@@ -4,6 +4,10 @@
     var idioma = prompt("Por favor, digite o código do IDIOMA")
     var variacao = prompt("Por favor, digite a variação")
 
+
+    /// en-us = hi\cb1 \ // en-gb = hello\cb1 \ // (true ou false) (&& (and) true ou false ) // (idioma == "pt") (&& variacao == "br" || variacao == "pt") }
+
+
     if (idioma == "pt" && (variacao == "br" || variacao == "pt")) {
       alert("Olá")
     } else if (idioma == "en" && variacao == "us") {
